// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select closes drop on esc 1`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS gwcVfH"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS eyAnEo"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS dEzmWD"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS eibuqJ"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI bUVmvh"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS eibuqJ"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI bUVmvh"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select closes drop on esc 2`] = `
"@media only screen and (max-width:699px) {
  .iSuXom {
    border: solid 1px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    padding: 4px;
  }
}

@media only screen and (max-width:699px) {
  .jgAbJr {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jgAbJr {
    padding: 3px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select closes drop on esc 3`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iSuXom"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS lafodx"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select closes drop on esc 4`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iSuXom"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS lafodx"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 1`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iSuXom"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS lafodx"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 2`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iSuXom"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS lafodx"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 3`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS gwcVfH"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS eyAnEo"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS dEzmWD"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS eibuqJ"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI bUVmvh"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS eibuqJ"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI bUVmvh"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts 4`] = `
"@media only screen and (max-width:699px) {
  .iSuXom {
    border: solid 1px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    padding: 4px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select mounts 5`] = `
<div
  class="StyledBox-bStriS dEzmWD"
  direction="column"
  role="menubar"
  tabindex="-1"
>
  <button
    class="StyledButton-gXzblK faBScD"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-bStriS eibuqJ"
      direction="column"
    >
      <span
        class="StyledText-eJMSZI bUVmvh"
      >
        one
      </span>
    </div>
  </button>
  <button
    class="StyledButton-gXzblK faBScD"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-bStriS eibuqJ"
      direction="column"
    >
      <span
        class="StyledText-eJMSZI bUVmvh"
      >
        two
      </span>
    </div>
  </button>
</div>
`;

exports[`Select mounts with complex options and children 1`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iSuXom"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS lafodx"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts with complex options and children 2`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iSuXom"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS lafodx"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts with complex options and children 3`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS gwcVfH"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS eyAnEo"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS dEzmWD"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <span>
            one
          </span>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <span>
            two
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts with complex options and children 4`] = `
"@media only screen and (max-width:699px) {
  .iSuXom {
    border: solid 1px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    padding: 4px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select mounts with search 1`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS gwcVfH"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS jgAbJr"
      direction="column"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
      >
        <input
          type="search"
          class="StyledTextInput-bzOzsW bNmXcC"
          autocomplete="off"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS eyAnEo"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS dEzmWD"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS eibuqJ"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI bUVmvh"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS eibuqJ"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI bUVmvh"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts with search 2`] = `
"@media only screen and (max-width:699px) {
  .iSuXom {
    border: solid 1px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    padding: 4px;
  }
}

@media only screen and (max-width:699px) {
  .jgAbJr {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jgAbJr {
    padding: 3px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select mounts with search 3`] = `
<input
  type="search"
  class="StyledTextInput-bzOzsW bNmXcC"
  autocomplete="off"
  value=""
/>
`;

exports[`Select mounts with search 4`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS gwcVfH"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS jgAbJr"
      direction="column"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
      >
        <input
          type="search"
          class="StyledTextInput-bzOzsW bNmXcC"
          autocomplete="off"
          value="a"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS eyAnEo"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS dEzmWD"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS eibuqJ"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI bUVmvh"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS eibuqJ"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI bUVmvh"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts with search 5`] = `
"@media only screen and (max-width:699px) {
  .iSuXom {
    border: solid 1px rgba(0,0,0,0.15);
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iSuXom {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    margin-left: 4px;
    margin-right: 4px;
  }
}

@media only screen and (max-width:699px) {
  .lafodx {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gwcVfH {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eyAnEo {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dEzmWD {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eibuqJ {
    padding: 4px;
  }
}

@media only screen and (max-width:699px) {
  .jgAbJr {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jgAbJr {
    padding: 3px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;
